# ToDoHelper

./: CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.js
.claude/: settings.local.json
.superpowers/brainstorm/18568-1776130407/content/: color-palette-v2.html  color-palette.html  design-directions.html
.superpowers/brainstorm/18568-1776130407/state/: server-stopped
design-system/: MASTER.md
docs/superpowers/plans/: 2026-04-13-float-and-filter-redesign.md  2026-04-13-todo-helper.md  2026-04-14-modern-vibrant-ui.md
docs/superpowers/specs/: 2026-04-13-float-and-filter-redesign.md  2026-04-13-todo-helper-design.md  2026-04-14-modern-vibrant-ui-design.md
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: FloatControls.vue  FloatTaskList.vue  PriorityBadge.vue  Sidebar.vue  TagChip.vue  TaskEditor.vue  TaskItem.vue  TaskList.vue  ThemeToggle.vue  TopBar.vue
src/db/: init.js  settingQueries.js  taskQueries.js
src/stores/: settingStore.js  taskStore.js
src/stores/__tests__/: settingStore.test.js  taskStore.test.js
src/styles/: theme.css
src/views/: FloatView.vue  MainView.vue
