[package]
name = "todo-helper"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "todo_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-sql = { version = "2.0.0", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
